<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">
    <ImageView
        android:id="@+id/log_in_client__imv"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        app:srcCompat="@drawable/login" />

    <EditText
        android:id="@+id/log_in_client_et_parola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="182dp"
        android:drawableLeft="@drawable/ic_login_black_lacatel"
        android:ems="10"

        android:hint="@string/LogInParola"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/log_in_client_et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableLeft="@drawable/ic_face_login"
        android:ems="10"
        android:hint="@string/LogInEmail"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/log_in_client_btn_log"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/log_in_client_et_parola"
        android:layout_marginTop="-182dp"
        android:text="@string/Buton_log_in_avocat" />

    <Button
        android:id="@+id/log_in_btn_client_sign_up"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:textColor="@color/colorAccent"
        android:text="@string/buton_sign_up" />

    <Button
        android:id="@+id/log_in_client_btn_reset_parola"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="92dp"
        android:text="@string/am_uitat_parola"
        android:textColor="@color/colorAccent" />

</RelativeLayout>