<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInAvocatActivity">


    <ImageView
        android:id="@+id/log_in_imv"
        android:layout_width="166dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        app:srcCompat="@drawable/account" />

    <EditText
        android:id="@+id/log_in_et_parola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/log_in_et_email"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="-207dp"
        android:drawableLeft="@drawable/ic_login_black_lacatel"
        android:ems="10"
        android:hint="@string/LogInParola"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/log_in_et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="207dp"
        android:drawableLeft="@drawable/ic_face_login"
        android:ems="10"
        android:hint="@string/LogInEmail"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/log_in_btn_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="98dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/grenaInchis"
        android:text="@string/Buton_log_in_avocat" />

    <Button
        android:id="@+id/log_in_btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="37dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/grenaInchis"
        android:text="@string/buton_sign_up"
        android:textColor="@color/colorAccent" />

</RelativeLayout>