<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/copy"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_tw_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="86dp"
        android:text="@string/bine_ai_venit"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/main_btn_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="145dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/grenaInchis"
        android:text="@string/TextButonClient"
        android:textStyle="bold" />

    <Button
        android:id="@+id/main_btn_avocat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="72dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/grenaInchis"
        android:gravity="center"
        android:text="@string/TextButonAvocat"
        android:textStyle="bold" />




</RelativeLayout>