<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpClientActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="117dp"
        android:text="Sign Up"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/sign_up_client_et_parola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="170dp"
        android:ems="10"
        android:drawableLeft="@drawable/ic_login_black_lacatel"
        android:hint="@string/LogInParola"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="308dp" />
    <EditText
        android:id="@+id/sign_up_client_et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/LogInEmail"
        android:drawableLeft="@drawable/ic_face_login"
        android:layout_centerInParent="true"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/sign_up_client_btn_inregistrare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="92dp"
        android:text="@string/inregistrare"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/grenaInchis"
        android:textColor="@color/colorAccent" />
    <TextView
        android:id="@+id/sign_up_avocat_tv_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="52dp"
        android:textAlignment="center"
        android:text="Esti deja inregistrat?Intra in cont de aici"
        android:textColor="@color/grenaInchis" />

</RelativeLayout>